--- a/.gitignore
+++ b/.gitignore
@@ -89,4 +89,4 @@ fabric.properties
 !.idea/codeStyles
 !.idea/runConfigurations
 
-# End of https://www.toptal.com/developers/gitignore/api/pycharm+all
+# End of https://www.toptal.com/developers/gitignore/api/pycharm+all!/travel/__init__.py
